<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MyIncidentDetailActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_side"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/backImageButton"
            app:srcCompat="@drawable/ic_arrow_back"
            android:layout_width="@dimen/toolbar_side"
            android:layout_height="match_parent"
            android:tint="@color/colorAccent"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/memberTextView"
            android:text="@string/incident_detail"
            android:textSize="@dimen/toolbar_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/progressBarSize"
            android:layout_height="@dimen/progressBarSize"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/default_margin"
            android:visibility="gone"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/detailConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:background="@color/colorPrimaryLightLight"
        android:layout_margin="@dimen/big_margin">

        <com.androidnetworking.widget.ANImageView
            android:id="@+id/userImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/big_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/userTextView"
            android:text="User 1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_margin"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/userImageView"
            app:layout_constraintTop_toTopOf="@id/userImageView"
            app:layout_constraintBottom_toBottomOf="@id/userImageView"/>

        <TextView
            android:id="@+id/incidentDescriptionTextView"
            android:text="@string/description_incident"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:lineSpacingExtra="5dp"
            android:layout_margin="@dimen/big_margin"
            app:layout_constraintTop_toBottomOf="@id/userImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/resolvedAppCompatCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin"
        android:checked="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/resolvedTextView"
        app:layout_constraintBottom_toBottomOf="@id/resolvedTextView"/>

    <TextView
        android:id="@+id/resolvedTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_margin"
        android:text="@string/resolved"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/resolvedAppCompatCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailConstraintLayout"/>

    <com.libizo.CustomEditText
        android:id="@+id/responseCustomEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/big_margin"
        android:hint="@string/description"
        android:gravity="top"
        android:enabled="false"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        app:libIZO_clearIconTint="@color/colorAccent"
        app:libIZO_setBorderColor="@color/colorAccent"
        app:libIZO_setBorderView="true"
        app:libIZO_setClearIconVisible="false"
        app:libIZO_setCornerRadius="4dp"
        app:libIZO_setStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resolvedTextView"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>